database-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hazel
  labels: {kubernetes.io/metadata.name: hazel}
